@@ -27,7 +27,7 @@ libglobus_gass_copy_la_LIBADD = $(PACKAGE_DEP_LIBS) $(OPENSSL_LIBS)
 
 globus_url_copy_SOURCES = globus_url_copy.c
 globus_url_copy_LDFLAGS = -export-dynamic -dlpreopen force
-globus_url_copy_LDADD = $(GSI_DRIVER_DLOPEN) \
+globus_url_copy_LDADD = $(GSI_DRIVER_DLOPEN) $(POPEN_DRIVER_DLOPEN) \
                         libglobus_gass_copy.la \
 			$(PACKAGE_DEP_LIBS) $(OPENSSL_LIBS) -lltdl
 globus_url_copy_noinst_SOURCES = globus_url_copy.c
