@@ -1,3 +1,9 @@
+globus-gridftp-server (12.3-1+gt6.@distro@) @distro@; urgency=low
+
+  * preloaded module typo fix
+
+ -- Globus Toolkit <support@globus.org>  Mon, 25 Sep 2017 15:22:46 -0500
+
 globus-gridftp-server (12.2-1+gt6.@distro@) @distro@; urgency=low
 
   * Fix tests when getgroups() does not return effective gid
